--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,20 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bevy = {version="0.13.2", features = ["dynamic_linking"]}
+bevy_panorbit_camera = "0.17.0"
+cargo = "0.78.1"
 cgmath = "0.18.0"
 regex = "1.10.4"
+
+# set target target.x86_64-pc-windows-msvc
+[build]
+target = "x86_64-pc-windows-msvc"
+
+# Enable a small amount of optimization in debug mode
+[profile.dev]
+opt-level = 1   
+
+# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
+[profile.dev.package."*"]
+opt-level = 3
