--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,24 +1,33 @@
 [package]
-name = "bvh-anim-parser"
+name = "bvh_anim_parser"
 version = "0.1.0"
 edition = "2021"
-
+authors = ["Wojciech Pachowiak <wojtekpaszo@gmail.com>"]
+repository = "https://github.com/WojtekPachowiak/bvh-anim-parser"
+documentation = "TODO"
+readme = "README.md"
+description = "A .bvh file parser"
+keywords = ["bvh", "biovision", "parser", "animation", "mocap"]
+categories = ["parser-implementations", "rendering::data-formats", "mathematics", "game-development"]
+license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = {version="0.13.2", features = ["dynamic_linking"]}
-bevy_panorbit_camera = "0.17.0"
+bevy = {version="0.13.2", features = ["dynamic_linking"], optional=true}
+bevy_panorbit_camera = {version="0.17.0", optional=true}
 cargo = "0.78.1"
 cgmath = "0.18.0"
-polars = "0.39.2"
+# polars = "0.39.2"
 regex = "1.10.4"
 
+[features]
+visualize=["dep:bevy", "dep:bevy_panorbit_camera"]
 
 
 # Enable a small amount of optimization in debug mode
-[profile.dev]
-opt-level = 1   
+# [profile.dev]
+# opt-level = 1   
 
 # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
-[profile.dev.package."*"]
-opt-level = 3
+# [profile.dev.package."*"]
+# opt-level = 3
