--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,13 +17,19 @@ bevy = {version="0.13.2", features = ["dynamic_linking"], optional=true}
 bevy_panorbit_camera = {version="0.17.0", optional=true}
 cargo = "0.78.1"
 cgmath = "0.18.0"
-# polars = "0.39.2"
+polars = {version="0.39.2", optional=true} 
 regex = "1.10.4"
 
+[dev-dependencies]
+criterion = "0.3"
 
+[[bench]]
+name = "my_benchmark"
+harness = false
 
 [features]
 visualize=["dep:bevy", "dep:bevy_panorbit_camera"]
+dataframe=["dep:polars"]
 
 
 [[example]]
